Fix spacing

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -13,5 +13,5 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   list-style: none;
-  padding-inline-start: 0;
+  padding-left: 0;
 }
